--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -6,17 +6,17 @@
       [(ngModel)]="selectedButton"
     >
 
-    <ion-segment-button value="misdatos" class="custom-segment-button">
+    <ion-segment-button id="misDatos" value="misdatos" class="custom-segment-button">
       <ion-icon name="grid-outline"></ion-icon>
       {{ "HomePage.Button.Misdatos" | translate }}
     </ion-segment-button>
     
-    <ion-segment-button value="dinosaur" class="custom-segment-button">
+    <ion-segment-button id="miClase" value="dinosaur" class="custom-segment-button">
       <ion-icon name="school-outline"></ion-icon>
       {{ "HomePage.Button.Miclase" | translate }}
     </ion-segment-button>
     
-    <ion-segment-button value="forum" class="custom-segment-button">
+    <ion-segment-button id="foro" value="forum" class="custom-segment-button">
       <ion-icon name="pencil-outline"></ion-icon>
       {{ "HomePage.Button.Forum" | translate }}
     </ion-segment-button>
