--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -14,7 +14,7 @@
     <div slot="end" style="display: flex; align-items: center;">
 
       <!-- Botón Logout -->
-      <ion-button (click)="logout()" size="small" fill="clear" style="--padding-start: 4px; --padding-end: 4px;">
+      <ion-button id="salir" (click)="logout()" size="small" fill="clear" style="--padding-start: 4px; --padding-end: 4px;">
         <ion-icon name="log-out-outline" color="dark" style="font-size: 16px;"></ion-icon>
       </ion-button>
     </div>
