--- a/src/app/pages/correcto/correcto.page.html
+++ b/src/app/pages/correcto/correcto.page.html
@@ -28,7 +28,7 @@
       <p>{{'Recuperar.Form.Es' | translate}}</p>
       <p style="font-weight: bold; font-size: 1.2em;">{{ password }}</p>
 
-      <ion-button expand="block" color="primary" (click)="login()">
+      <ion-button id="inicio" expand="block" color="primary" (click)="login()">
         {{'Recuperar.Form.Inicio' | translate}}
       </ion-button>
     </div>
