--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -23,7 +23,7 @@
   *ngIf="selectedComponent === 'forum'">
   </app-forum>
 
-  <app-misdatos
+  <app-misdatos id="misDatos"
   *ngIf="selectedComponent === 'misdatos'">
   </app-misdatos>
 
