--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -8,7 +8,7 @@
   <ion-toolbar class="grey">
     
     <div slot="start" class="ion-margin idioma" >
-      <app-language #selectLanguage></app-language>
+      <app-language id="idioma" #selectLanguage></app-language>
     </div>
 
 
