--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -26,6 +26,9 @@
   <app-misdatos id="misDatos"
   *ngIf="selectedComponent === 'misdatos'">
   </app-misdatos>
+  
+  <app-admin *ngIf="selectedComponent === 'admin'"></app-admin>
+
 
 </ion-content>
 
