--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,5 +1,5 @@
 <ion-footer class="custom-footer">
-  <ion-toolbar color="gray" style="padding-bottom: 4px;">
+  <ion-toolbar style="padding-bottom: 4px;">
     <ion-segment 
       value="welcome" 
       (ionChange)="sendClickEvent($event)"
@@ -25,8 +25,12 @@
       <ion-icon name="home-outline"></ion-icon>
       {{ "HomePage.Button.Wellcome" | translate }}
     </ion-segment-button>
-      
-    </ion-segment>
 
+    
+    <ion-segment-button *ngIf="admin_" value="admin" class="custom-segment-button">
+      <ion-icon name="person-outline"></ion-icon >
+      {{ "HomePage.Button.Admin" | translate }}
+    </ion-segment-button>
+    </ion-segment>
   </ion-toolbar>
 </ion-footer>
